infra/terraform/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = { Name = "${var.project}-${var.env}-vpc", Env = var.env, Project = "Starter", Owner = "Roy" }
}

resource "aws_internet_gateway" "igw" { vpc_id = aws_vpc.main.id }

data "aws_availability_zones" "azs" {}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_cidr
  availability_zone       = data.aws_availability_zones.azs.names[0]
  map_public_ip_on_launch = true
  tags = { Name = "public", Env = var.env, Project = "Starter", Owner = "Roy" }
}

resource "aws_subnet" "private" {
  for_each                = toset(var.private_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = each.value
  availability_zone       = element(data.aws_availability_zones.azs.names, index(var.private_cidrs, each.value))
  map_public_ip_on_launch = false
  tags = { Name = "private-${index(var.private_cidrs, each.value)}", Env = var.env, Project = "Starter", Owner = "Roy" }
}

resource "aws_route_table" "public" { vpc_id = aws_vpc.main.id }
resource "aws_route" "public_inet" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}
resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
